Third try to fix image
modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
     <h1>Header</h1>
     <p>paragraph</p>
-    <img src="./Images/unnamed.jpeg"/>
+    <img src="./Images/unnamed.jpg"/>
 </html>
