Added another page and linked to it.
new file:
    * Images/Michigan_Wolverines_Logo.svg.png
    * Pages/another.html
modified:
    * index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <h1>Header</h1>
     <p>paragraph</p>
+    <a href="./Pages/another.html">another page</a>
     <img src="./Images/unnamed.jpg"/>
 </html>
