--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
     <h1>Header</h1>
     <p>paragraph</p>
     <a href="./Pages/another.html">another page</a>
+    <br>
+    <a href="./Pdfs/a.pdf">a pdf</a>
     <img src="./Images/unnamed.jpg"/>
 </html>
