Redid file structure for cleaner urls.
deleted:
    * Pages/another.html
new file:
    * another.html
modified:
    * index.html
renamed:
    * Pdfs/a.pdf -> papers/a.pdf
    * Pdfs/another.pdf -> papers/another.pdf

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <h1>Header</h1>
     <p>paragraph</p>
-    <a href="./Pages/another.html">another page</a>
+    <a href="./another.html">another page</a>
     <br>
-    <a href="./Pdfs/a.pdf">a pdf</a>
+    <a href="./papers/a.pdf">a pdf</a>
     <img src="./Images/unnamed.jpg"/>
 </html>
