Playing with text align.
modified:   index.html

--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
         }
         .text {
             flex: 1;
-            .image-with-caption {
-            }
+            text-align: center;
+        }
+        .image-with-caption {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
