--- a/index.html
+++ b/index.html
@@ -58,17 +58,22 @@
             background-color: white;
         }
         .text {
+            text-align: left;
+            justify-content: center;
             flex: 1;
+        }
+        .text-center {
             text-align: center;
         }
         .image-with-caption {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         .caption {
             text-align: center;
             margin-top: 10px;
+            margin-right: 20px;
             color: #555;
             width:100%;
         }
@@ -88,35 +93,42 @@
             <div class="caption">jusebfer (at) umich.edu</div>
         </div>
         <div class="text">
-            <h1>Juan Sebastián Fernández-Ibáñez</h1>
-            <p> I am a job market candidate in Economics at the University of Michigan.
-            <p> My research focuses on Trade, using structural estimation.
-        <h2>Job Market Paper</h2>
-        <u><strong>The Dynamic Consequences of Trade Restrictions</strong></u>
+            <div class="text-center">
+                <h1>Juan Sebastián Fernández-Ibáñez</h1>
+                <p> I am a job market candidate in Economics at the University of Michigan.
+                <p> My research focuses on Trade, using structural estimation.
+                <h2>Job Market Paper</h2>
+                <u><strong>The Dynamic Consequences of Trade Restrictions</strong></u>
+            </div>
         <p> Merge Costinot with Rosen to explore the welfare effects of export restrictions in a dynamic setting: cattle raising in Argentina. Domestic producers end up losing the most.</p>
-        <button
-          type="button"
-          class="collapsible"
-        >
-          [Abstract]
-        </button>
-        <div class="collapsible-content">
-          <p align="justify">
+        <div class="text-center">
+            <button
+              type="button"
+              class="collapsible"
+            >
+              [Abstract]
+            </button>
+            <div class="collapsible-content">
+              <p align="justify">
 
-          How is capital reallocated as a response to trade shocks?
-          We study that question in the context of restrictions on the exports of beef in Argentina in the period 2006-2015.
-          We build a novel county-level dataset of yearly cattle stock disaggregated by variety.
-          As the ban takes place, we observe a significant contraction of export-intensive varieties, and a reduction of their relative prices.
-          We build a structural dynamic model extending static land share use models with the dynamic problem of cattle raising.
-          The model sees the initial decrease in the cattle stock as responsible for low prices and capital depletion of the export sector, with spillover effects on domestic varieties.
-            </p>
+              How is capital reallocated as a response to trade shocks?
+              We study that question in the context of restrictions on the exports of beef in Argentina in the period 2006-2015.
+              We build a novel county-level dataset of yearly cattle stock disaggregated by variety.
+              As the ban takes place, we observe a significant contraction of export-intensive varieties, and a reduction of their relative prices.
+              We build a structural dynamic model extending static land share use models with the dynamic problem of cattle raising.
+              The model sees the initial decrease in the cattle stock as responsible for low prices and capital depletion of the export sector, with spillover effects on domestic varieties.
+                </p>
+            </div>
         </div>
 
-        <h2>Working Papers</h2>
-        <u><strong>Rationally Inattentive Exporters</strong></u>
-        <p>
+        <div class="text-center">
+            <h2>Working Papers</h2>
+            <u><strong>Rationally Inattentive Exporters</strong></u>
+        </div>
+            <p>
             Melitz meets Matejka; add a layer of rational inattention theory to the standard model of international trade. Information costs muddy selection into exporting and affect middle-sized firms the most.
         </p>
+        <div class="text-center">
         <button
           type="button"
           class="collapsible"
@@ -137,6 +149,7 @@
         </div>
         <h2>Work in Progress</h2>
         <u><strong>The Effects of Competition in the Argentine Commercial Airline Industry</strong></u>
+        </div>
         <p>
             Study the changes brought about from a shift of a domestic market being served by a state monopoly to allowing free entry of private firms.
         </p>
