--- a/teaching.html
+++ b/teaching.html
@@ -13,6 +13,9 @@
             flex-direction: column;
             align-items: center;
         }
+        h2{
+            text-align:center;
+        }
         .top-row {
             background-color: #f8f8f8;
             padding: 10px;
@@ -50,6 +53,7 @@
         .caption {
             text-align: center;
             margin-top: 10px;
+            margin-right: 20px;
             color: #555;
         }
     </style>
