--- a/teaching.html
+++ b/teaching.html
@@ -68,7 +68,7 @@
 
     <div class="content">
         <div class="image-with-caption">
-            <img src="./Images/headshot.jpg">
+            <img src="./Images/headshot_scaled.jpg">
             <div class="caption"> jusebfer (at) umich.edu</div>
         </div>
         <div class="text">
