Fixed consistency of CV opening in a different window.
modified:
    * teaching.html

--- a/teaching.html
+++ b/teaching.html
@@ -63,7 +63,7 @@
     <div class="top-row">
         <a href="./index.html">Research</a>
         <a href="#">Teaching</a>
-        <a href="./cv.pdf">CV</a>
+        <a href="./cv.pdf" target="_blank">CV</a>
     </div>
 
     <div class="content">
