--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <h2>Job Market Paper</h2>
                 <u><strong>The Dynamic Consequences of Trade Restrictions</strong></u>
             </div>
-        <p> Merge Costinot with Rosen to explore the welfare effects of export restrictions in a dynamic setting: cattle raising in Argentina. Domestic producers end up losing the most.</p>
+        <p align=justify> Merge Costinot with Rosen to explore the welfare effects of export restrictions in a dynamic setting: cattle raising in Argentina. Domestic producers end up losing the most.</p>
         <div class="text-center">
             <button
               type="button"
@@ -125,7 +125,7 @@
             <h2>Working Papers</h2>
             <u><strong>Rationally Inattentive Exporters</strong></u>
         </div>
-            <p>
+            <p align=justify>
             Melitz meets Matejka; add a layer of rational inattention theory to the standard model of international trade. Information costs muddy selection into exporting and affect middle-sized firms the most.
         </p>
         <div class="text-center">
@@ -150,7 +150,7 @@
         <h2>Work in Progress</h2>
         <u><strong>The Effects of Competition in the Argentine Commercial Airline Industry</strong></u>
         </div>
-        <p>
+        <p align=justify>
             Study the changes brought about from a shift of a domestic market being served by a state monopoly to allowing free entry of private firms.
         </p>
 
