Fixed padding issue.
modified:
    * index.html

--- a/index.html
+++ b/index.html
@@ -79,17 +79,17 @@
         }
         @media (max-width: 768px) {
             .content {
+                width: auto;
                 flex-direction: column;
                 align-items: center;
+                padding: 0 20px;
             }
             .content img {
                 margin-right: 0px;
                 margin-top:20px;
             }
-        .caption {
-            margin-right: 0px;
-            color: #555;
-            width:100%;
+            .caption {
+                margin-right: 0px;
             }
         }
     </style>
