--- a/teaching.html
+++ b/teaching.html
@@ -64,11 +64,10 @@
                 padding: 0 20px;
             }
             .content img {
-                margin-right: 0px;
-                margin-top:20px;
+                display: none;
             }
             .caption {
-                margin-right: 0px;
+                display: none;
             }
         }
     </style>
