--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
             color: #555;
             width:100%;
         }
+        span.email b{
+            display: none;
+        }
         @media (max-width: 768px) {
             .content {
                 width: auto;
@@ -104,7 +107,7 @@
     <div class="content">
         <div class="image-with-caption">
             <img src="./Images/headshot_scaled.jpg">
-            <div class="caption">jusebfer (at) umich.edu</div>
+            <div class="caption"><span class="email">jusebfer@<b>null</b>umich.edu</span></div>
         </div>
         <div class="text">
             <div class="text-center">
