--- a/teaching.html
+++ b/teaching.html
@@ -56,6 +56,9 @@
             margin-right: 20px;
             color: #555;
         }
+        span.email b{
+            display: none;
+        }
         @media (max-width: 768px) {
             .content {
                 width: auto;
@@ -82,7 +85,7 @@
     <div class="content">
         <div class="image-with-caption">
             <img src="./Images/headshot_scaled.jpg">
-            <div class="caption"> jusebfer (at) umich.edu</div>
+            <div class="caption"><span class="email">jusebfer@<b>null</b>umich.edu</span></div>
         </div>
         <div class="text">
             <p>
