--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <h2>Job Market Paper</h2>
                 <u><strong>The Dynamic Consequences of Trade Restrictions</strong></u>
             </div>
-        <p align=justify> Merge Costinot with Rosen to explore the welfare effects of export restrictions in a dynamic setting: cattle raising in Argentina. Domestic producers end up losing the most.</p>
+            <p align=justify> Merge Costinot (2016) with Rosen (1994) to explore the welfare effects of export restrictions in a dynamic setting: cattle raising in Argentina. Domestic producers end up losing the most.</p>
         <div class="text-center">
             <button
               type="button"
@@ -143,7 +143,7 @@
             <u><strong>Rationally Inattentive Exporters</strong></u>
         </div>
             <p align=justify>
-            Melitz meets Matejka; add a layer of rational inattention theory to the standard model of international trade. Information costs muddy selection into exporting and affect middle-sized firms the most.
+            Melitz (2003) meets Matejka (2015); add a layer of rational inattention theory to the standard model of international trade. Information costs muddy selection into exporting and affect middle-sized firms the most.
         </p>
         <div class="text-center">
         <button
