Fixed abstract 3y paper and slighly rephrased.
modified:   index.html

--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
             Can information act as a trade barrier?
             This paper develops a model of rationally inattentive exporters to answer the question.
             In the model, firms do not know their export revenue, but instead have a prior.
-            The prior can be complemented with a costly signal of arbitrary precision.
+            The prior can be complemented with a signal of arbitrary precision, the higher the precision the more costly the signal.
             The theory reveals (1) information costs affect medium-sized firms the most, (2) the effect on trade volume is indeterminate, (3) information frictions cause inefficient selection into exporting.
-            I take the model to the data using the Colombian Manufactur ing Survey of 2017.
+            I take the model to the data using the Colombian Manufacturing Survey of 2017.
             Being fully informed costs the firm as much as the fixed cost of exporting.
             The estimates of fixed costs are in the range observed in the literature.
             </p>
