Added abstract 3rd paper.
modified:   index.html

--- a/index.html
+++ b/index.html
@@ -168,11 +168,29 @@
             </p>
         </div>
         <h2>Work in Progress</h2>
-        <u><strong>The Effects of Competition in the Argentine Commercial Airline Industry</strong></u>
+        <u><strong>The Economic Consequences of Regulatory Nationalism</strong></u>
         </div>
         <p align=justify>
-            Study the changes brought about from a shift of a domestic market being served by a state monopoly to allowing free entry of private firms.
+            Study the changes brought about in the Argentine commercial airline industry from a shift of a domestic market being served by a state monopoly to allowing free entry of private firms.
         </p>
+        <div class="text-center">
+        <button
+          type="button"
+          class="collapsible"
+        >
+          [Abstract]
+        </button>
+        <div class="collapsible-content">
+          <p align="justify">
+            Domestic commercial airline markets are heavily regulated around the world, restricting the firms that may participate in them based on nationality.
+            What is the economic cost of such a pervasive regulation?
+            We study this question in an episode deregulation in Argentina.
+            After years of a market closed to entry, dominated by a state firm, licencing for new routes was completely liberalized.
+            This triggered entry of new private firms, among them a Ryan Air subsidiary.
+            We construct a novel data set of flight prices and quantities based on private data.
+            We use Chile as a control and employ a difference in difference identification strategy to recover the causal effect of the policy change on prices.
+            </p>
+        </div>
 
     </div>
 
