--- a/index.html
+++ b/index.html
@@ -115,35 +115,35 @@
                 <p> I am a job market candidate in Economics at the University of Michigan.
                 <p> My research focuses on Trade, using structural estimation.
                 <h2>Job Market Paper</h2>
-                <u><strong>The Dynamic Welfare Consequences of Trade Restrictions</strong></u>
-            </div>
-            <p align=justify> Merge Costinot (2016) with Rosen (1994) to explore the welfare effects of export restrictions in a dynamic setting: cattle raising in Argentina. Domestic producers end up losing the most.</p>
-        <div class="text-center">
-            <button
-              type="button"
-              class="collapsible"
-            >
-              [Abstract]
-            </button>
-            <div class="collapsible-content">
-              <p align="justify">
+                    <a href="./papers/jmp.pdf">The Dynamic Welfare Consequences of Trade Restrictions</a>
+                </div>
+                <p align=justify> Merge Costinot (2016) with Rosen (1994) to explore the welfare effects of export restrictions in a dynamic setting: cattle raising in Argentina. Domestic producers end up losing the most.</p>
+            <div class="text-center">
+                <button
+                  type="button"
+                  class="collapsible"
+                >
+                  [Abstract]
+                </button>
+                <div class="collapsible-content">
+                  <p align="justify">
 
-    Food-exporting countries have a tendency to restrict exports when faced with international price increases.
-    The goal of such measures is to redistribute income from exporters to consumers.
-    What is the effect of such policy on the exporting countries?
-    We study that question in the context of restrictions on the exports of beef in Argentina in the period 2006-2015.
-    We construct a novel county-level dataset of yearly cattle stock disaggregated by variety.
-    We build a structural dynamic model extending static land share use models Costinot (2016) with the dynamic problem of cattle raising Rosen (1994).
-    Quantitative analysis shows the policy to be blunt; it loses most of the welfare it is trying to redistribute, and it has negative spillovers for domestic producers.
-    The dynamics are perverse; effects are strongest in the short run, but as exporters adjust to the policy, consumer gains dwindle and the burden of the policy is shifted to domestic producers.
-    This may explain why these policies tend to be short-lived.
-                </p>
+        Food-exporting countries have a tendency to restrict exports when faced with international price increases.
+        The goal of such measures is to redistribute income from exporters to consumers.
+        What is the effect of such policy on the exporting countries?
+        We study that question in the context of restrictions on the exports of beef in Argentina in the period 2006-2015.
+        We construct a novel county-level dataset of yearly cattle stock disaggregated by variety.
+        We build a structural dynamic model extending static land share use models Costinot (2016) with the dynamic problem of cattle raising Rosen (1994).
+        Quantitative analysis shows the policy to be blunt; it loses most of the welfare it is trying to redistribute, and it has negative spillovers for domestic producers.
+        The dynamics are perverse; effects are strongest in the short run, but as exporters adjust to the policy, consumer gains dwindle and the burden of the policy is shifted to domestic producers.
+        This may explain why these policies tend to be short-lived.
+                    </p>
+                </div>
             </div>
-        </div>
 
-        <div class="text-center">
-            <h2>Working Papers</h2>
-            <u><strong>Rationally Inattentive Exporters</strong></u>
+            <div class="text-center">
+                <h2>Working Papers</h2>
+                <a href="./papers/ri_exporters.pdf">Rationally Inattentive Exporters</a>
         </div>
             <p align=justify>
             Melitz (2003) meets Matejka (2015); add a layer of rational inattention theory to the standard model of international trade. Information costs muddy selection into exporting and affect middle-sized firms the most.
