Updated abstracts in index.
modified:   index.html

--- a/index.html
+++ b/index.html
@@ -128,12 +128,11 @@
                 <div class="collapsible-content">
                   <p align="justify">
 
-        Food-exporting countries have a tendency to restrict exports when faced with international price increases.
+        Food exporting countries often restrict exports when faced with international price increases.
         The goal of such measures is to redistribute income from exporters to consumers.
         What is the effect of such policy on the exporting countries?
-        We study that question in the context of restrictions on the exports of beef in Argentina in the period 2006-2015.
-        We construct a novel county-level dataset of yearly cattle stock disaggregated by variety.
-        We build a structural dynamic model extending static land share use models Costinot (2016) with the dynamic problem of cattle raising Rosen (1994).
+        I study that question in the context of restrictions on the exports of beef in Argentina in the period 2006-2015.
+        I construct a novel county-level dataset of yearly cattle stock disaggregated by variety, and use it to inform a structural model of land use that incorporates the dynamic problem of cattle raising.
         Quantitative analysis shows the policy to be blunt; it loses most of the welfare it is trying to redistribute, and it has negative spillovers for domestic producers.
         The dynamics are perverse; effects are strongest in the short run, but as exporters adjust to the policy, consumer gains dwindle and the burden of the policy is shifted to domestic producers.
         This may explain why these policies tend to be short-lived.
@@ -157,11 +156,11 @@
         </button>
         <div class="collapsible-content">
           <p align="justify">
-            Can information act as a trade barrier?
+            What role do information frictions play in trade costs?
             This paper develops a model of rationally inattentive exporters to answer the question.
             In the model, firms do not know their export revenue, but instead have a prior.
-            The prior can be complemented with a signal of arbitrary precision, the higher the precision the more costly the signal.
-            The theory reveals (1) information costs affect medium-sized firms the most, (2) the effect on trade volume is indeterminate, (3) information frictions cause inefficient selection into exporting.
+            The prior can be complemented with a costly signal of chosen precision.
+            The theory reveals (1) information costs affect medium-sized firms the most, (2) the effect on trade volume is ambiguous, (3) information frictions undermine productivity as the criterion to sort firms into exporting.
             I take the model to the data using the Colombian Manufacturing Survey of 2017.
             Being fully informed costs the firm as much as the fixed cost of exporting.
             The estimates of fixed costs are in the range observed in the literature.
