Added superficial corrections advisors.
modified:   index.html
modified:   papers/jmp.pdf

--- a/index.html
+++ b/index.html
@@ -127,15 +127,13 @@
                 </button>
                 <div class="collapsible-content">
                   <p align="justify">
-
-        Food exporting countries often restrict exports when faced with international price increases.
-        The goal of such measures is to redistribute income from exporters to consumers.
-        What is the effect of such policy on the exporting countries?
-        I study that question in the context of restrictions on the exports of beef in Argentina in the period 2006-2015.
-        I construct a novel county-level dataset of yearly cattle stock disaggregated by variety, and use it to inform a structural model of land use that incorporates the dynamic problem of cattle raising.
-        Quantitative analysis shows the policy to be blunt; it loses most of the welfare it is trying to redistribute, and it has negative spillovers for domestic producers.
-        The dynamics are perverse; effects are strongest in the short run, but as exporters adjust to the policy, consumer gains dwindle and the burden of the policy is shifted to domestic producers.
-        This may explain why these policies tend to be short-lived.
+                    Food exporting countries often restrict exports when faced with international price increases.
+                    The goal of such measures is to redistribute income from exporters to consumers.
+                    What is the effect of such policy on the exporting countries?
+                    I study that question in the context of restrictions on the exports of beef in Argentina in the period 2006-2015.
+                    I construct a novel county-level dataset of yearly cattle stock disaggregated by variety, and use it to inform a structural model of land use that incorporates the dynamic problem of cattle raising.
+                    Quantitative analysis shows the policy to be blunt: deadweight loss is large, and most of the income being redistributed comes from producers of domestic varieties, not export varieties.
+                    On the dynamic side effects are strongest in the short run, but as exporters adjust to the policy, consumer gains dwindle and the burden of the policy is shifted to domestic producers.
                     </p>
                 </div>
             </div>
