--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
     <div class="content">
         <div class="image-with-caption">
             <img src="./Images/headshot_scaled.jpg">
-            <div class="caption"><span class="email">jusebfer@<b>null</b>umich.edu</span></div>
+            <div class="caption"><span class="email">juan-sebastian.fernandez@<b>null</b>uib.cat</span></div>
         </div>
         <div class="text">
             <div class="text-center">
                 <h1>Juan Sebastián Fernández-Ibáñez</h1>
-                <p> I am a job market candidate in Economics at the University of Michigan.
+                <p> I am an Assistant Professor at the University of the Balearic Islands.
                 <p> My research focuses on Trade, using structural estimation.
                 <h2>Job Market Paper</h2>
                     <a href="./papers/jmp.pdf">The Dynamic Welfare Consequences of Trade Restrictions</a>
