--- a/teaching.html
+++ b/teaching.html
@@ -85,7 +85,7 @@
     <div class="content">
         <div class="image-with-caption">
             <img src="./Images/headshot_scaled.jpg">
-            <div class="caption"><span class="email">jusebfer@<b>null</b>umich.edu</span></div>
+            <div class="caption"><span class="email">juan-sebastian.fernandez@<b>null</b>uib.cat</span></div>
         </div>
         <div class="text">
             <p>
@@ -93,6 +93,12 @@
             I have taught Econ since I was an undergrad student in Argentina, all through my Master's and as a PhD student at Michigan.
             </p>
         <h2>Courses</h2>
+        <h3> University of the Balearic Islands </h3>
+        <ul>
+            <li>Economic Environment</li>
+            <li>Introduction to Economics</li>
+        </ul>
+
         <h3> University of Michigan</h3>
         <ul>
             <li>Econ 432 - Government Regulation of Industry</li>
